tests/miz/pass/types/pass_type_elaboration_multiple_object_reserve_declaration_equality_001.miz
reserve x for object;
reserve y for object;
theorem MultipleObjectReserveDeclarationEqualityPayloadBoundary: x = y;
