tests/miz/fail/parser/fail_parser_atomic_formula_mixed_chain_001.miz
import parser.type_fixtures;
theorem MixedChain: x divides y = z;
